recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:11: error: missing arguments for method spiral in class Spiral;
follow this method with `_' if you want to treat it as a partially applied function
	spiral(steps,angle,length,increment)=spiral(steps-1,angle,length+3,increment)
        ^